# RayTracingInOneWeekend

./: CMakeLists.txt  aa_rect.h  aabb.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  mesh.h  moving_sphere.h  onb.h  pdf.h  perlin.h  ray.h  renderer.h  rtw_stb_image.h  rtweekend.h  scene_generator.h  sphere.h  test.cpp  texture.h  triangle.h  vec3.h
results/: benchmark.md  cornell_box.ppm  cornell_box_spp2000.ppm  cornell_box_spp2000_aces_tone_mapping.ppm  cornell_smoke.ppm  earth.ppm  test_scene.ppm  the_next_week_final_scene.ppm  the_next_week_final_scene_5000spp.ppm  the_next_week_final_scene_5000spp_ACES.ppm  two_perlin_spheres.ppm  two_spheres.ppm
